server/src/server/snapshots/djinn_server__server__tests__epic_list_response.snap
---
source: src/server/mod.rs
expression: epic_list
---
{
  "epics": [
    {
      "closed_at": null,
      "color": "",
      "created_at": "[TIMESTAMP]",
      "description": "Epic used for MCP snapshot contract testing",
      "emoji": "",
      "id": "[UUID]",
      "memory_refs": [],
      "owner": "",
      "short_id": "[SHORT_ID]",
      "status": "open",
      "title": "Snapshot Epic",
      "updated_at": "[TIMESTAMP]"
    }
  ],
  "has_more": false,
  "limit": 10,
  "offset": 0,
  "total_count": 1
}
