server/src/server/snapshots/djinn_server__server__tests__task_activity_list_response.snap
---
source: src/server/mod.rs
expression: task_activity
---
{
  "count": 1,
  "entries": [
    {
      "actor_id": "[UUID]",
      "actor_role": "user",
      "created_at": "[TIMESTAMP]",
      "event_type": "comment",
      "id": "[UUID]",
      "payload": {
        "body": "snapshot comment"
      },
      "task_id": "[UUID]"
    }
  ]
}
