server/src/server/snapshots/djinn_server__server__tests__task_blockers_list_response.snap
---
source: src/server/mod.rs
expression: blockers
---
{
  "error": "invalid arguments for tool 'task_blockers_list': invalid type: null, expected a string",
  "ok": false
}
