server/src/server/snapshots/djinn_server__server__tests__task_list_response.snap
---
source: src/server/mod.rs
expression: task_list
---
{
  "has_more": false,
  "limit": 10,
  "offset": 0,
  "tasks": [],
  "total_count": 0
}
