server/src/server/snapshots/djinn_server__server__tests__task_show_response.snap
---
source: src/server/mod.rs
expression: task_show
---
{
  "error": "invalid arguments for tool 'task_show': invalid type: null, expected a string",
  "ok": false
}
